Fix some z-index issue adding new members

--- a/src/main/java/cc/kune/core/public/ws.css
+++ b/src/main/java/cc/kune/core/public/ws.css
@@ -903,6 +903,7 @@ table.k-folder-viewer {
   -khtml-opacity: 0.90;
   opacity: 0.90;
   margin-left: 3px;
+  z-index: 1200;
 }
 
 .gwt-SuggestBoxPopup .item {
